# LoggingService

./: .gitignore  CMakeLists.txt  config.toml
cxx/: CMakeLists.txt
include/: logger.h
rust/: Cargo.toml  build.rs
rust/src/: main.rs
server/include/: logger.h
src/: logger.cpp  main.cpp
test/: Cargo.toml
test/src/: main.rs
